--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Movie Search</string>
+    <string name="enter_a_movie_name">Enter a movie name</string>
 </resources>
